<resources>
    <string name="app_name">Shortify</string>
    <string name="link">Link</string>
    <string name="history">History</string>
    <string name="base">Base URL</string>
    <string name="shorten">Shorten URL</string>
    <string name="shortify">Shortify</string>
    <string name="blank">Please fill in the blank!</string>
    <string name="doing">Converting...</string>
    <string name="internet_main">No internet connection</string>
    <string name="internet_sub">Please check your internet connection and try again</string>
    <string name="internet_btn">Retry</string>
    <string name="setting">Settings</string>
    <string name="developer">Developer</string>
    <string name="version">App Version</string>
    <string name="homepage">Homepage</string>
    <string name="history_clear">Clear Up</string>
    <string name="unsupported">Unsupported format:(</string>
    <string name="clearComplete">complete:)</string>
    <string name="send">Send</string>
    <string name="dup">Copy to clipboard</string>
    <string name="open">Open in browser</string>
    <string name="delete">Delete</string>
    <string name="app">App</string>
    <string name="license">Open Source License</string>
    <string name="other_app">Other apps</string>
</resources>
